--- a/kivy_exs/screen.kv
+++ b/kivy_exs/screen.kv
@@ -5,47 +5,42 @@ ScreenManagement:
     AppAbout:
 <MenuScreen>:
     name: 'MenuScreen'
-    FloatLayout:
-        Label:
-            text: "This is Luna"
-            font_size: 48
-            size_hint: (1, 0.17)
-            pos_hint: {'x': -0.25, 'y': 0.75}
     GridLayout:
-        cols: 2
+        rows: 3
         Image:
-            source: 'Luna_320.jpeg'
+            source: 'Images/Statue_Lib.png'
+            orientation: 'vertical'
             size: self.texture_size
         FloatLayout:
             Button:
                 text: "File Explorer"
-                font_size: 24
-                size_hint: 0.45, 0.1
-                pos_hint: {'x': 0.2, 'y': 0.78}
+                font_size: 36
+                size_hint: 0.45, 0.15
+                pos_hint: {'x': 0.275, 'y': 0.78}
                 on_press:
-                    root.manager.transition.direction = "up"
+                    root.manager.transition.direction = "left"
                     root.manager.current = 'FileExplorer'
             Button:
                 text: "Devs"
-                font_size: 24
-                size_hint: 0.45, 0.1
-                pos_hint: {'x': 0.2, 'y': 0.58}
+                font_size: 36
+                size_hint: 0.45, 0.15
+                pos_hint: {'x': 0.275, 'y': 0.58}
                 on_press:
-                    root.manager.transition.direction = "up"
+                    root.manager.transition.direction = "down"
                     root.manager.current = 'AboutUs'
             Button:
                 text: "About"
-                font_size: 24
-                size_hint: 0.45, 0.1
-                pos_hint: {'x': 0.2, 'y': 0.38}
+                font_size: 36
+                size_hint: 0.45, 0.15
+                pos_hint: {'x': 0.275, 'y': 0.38}
                 on_press:
                     root.manager.transition.direction = "up"
                     root.manager.current = 'AppInfo'
             Button:
                 text: "Quit"
-                font_size: 24
-                size_hint: 0.45, 0.1
-                pos_hint: {'x': 0.2, 'y': 0.18}
+                font_size: 36
+                size_hint: 0.45, 0.15
+                pos_hint: {'x': 0.275, 'y': 0.18}
                 on_press:
                     app.get_running_app().stop()
 
@@ -56,52 +51,97 @@ ScreenManagement:
             text: "About Us!"
             font_size: 48
             size_hint: (1, 0.17)
-            pos_hint: {'x': 0, 'y': 0.8}
-    GridLayout:
-        cols: 2
-        rows: 3
+            pos_hint: {'x': 0, 'y': 0.85}
+    FloatLayout:
         Image:
-            source: 'kimy_25.png'
+            source: 'Images/Kimy_177.png'
+            pos_hint: {'x':-0.35, 'y':.115}
         Image:
-            source: 'saulo_40.png'
+            source: 'Images/FIT_177.png'
+            pos_hint: {'x':0, 'y':0.14}
+        Image:
+            source: 'Images/Saulo_177.png'
+            pos_hint: {'x':0.35, 'y':.115}
         Label:
-            text: "Kimberly Garcia"
-            font_size: 24
-            halign: 'right'
-            valign: 'middle'
-            size_hint: (0.2, 0.5)
+            text: 'Kimberly Garcia'
+            font_size: 32
+            pos_hint: {'x':-0.35, 'y':-0.15}
         Label:
-            text: "Saulo Bosquez"
-            font_size: 24
-            halign: 'right'
-            valign: 'middle'
-            size_hint: (0.2, 0.5)
+            text: 'Saulo Bosquez'
+            font_size: 32
+            pos_hint: {'x':0.35, 'y':-0.15}
         Label:
+            pos_hint: {'x':-0.32, 'y':-0.25}
             id: link_portafolio
-            font_size: 20
+            font_size: 32
             markup: True
-            text: '[ref=https://portafoliosfit.um.edu.mx/kimberlygarcia/]Visita mi portafolio[/ref]'
-            color: 1, 0, 1, 1
+            text:'[ref=https://portafoliosfit.um.edu.mx/kimberlygarcia/]Visita mi portafolio[/ref]'
+            color: 0.7, 0, 0.5, 1
             on_ref_press:
                 import webbrowser
                 webbrowser.open('https://portafoliosfit.um.edu.mx/kimberlygarcia/')
         Label:
+            pos_hint: {'x':0.32, 'y':-0.25}
             id: link_portafolio
-            font_size: 20
+            font_size: 32
             markup: True
-            text: '[ref=https://portafoliosfit.um.edu.mx/saulobosquez/]Visita mi portafolio[/ref]'
-            color: 1, 0, 1, 1
+            text:'[ref=https://portafoliosfit.um.edu.mx/saulobosquez/]Visita mi portafolio[/ref]'
+            color: 0.7, 0, 0.5, 1
             on_ref_press:
                 import webbrowser
                 webbrowser.open('https://portafoliosfit.um.edu.mx/saulobosquez/')
     FloatLayout:
         Button:
-            size_hint: 0.2, 0.1
-            pos_hint: {'x': 0.4, 'y': 0.025}
+            size_hint: 0.275, 0.1
+            pos_hint: {'x': 0.375, 'y': 0.025}
             text: "Main Menu"
+            font_size: 36
             on_press:
-                root.manager.transition.direction = "down"
+                root.manager.transition.direction = "up"
                 root.manager.current = 'MenuScreen'
+
+<DropDowns>
+    Button:
+        text: "AL"
+        size_hint:2, None
+        height:44
+        on_release:
+    Button:
+        text: "AR"
+        size_hint:2, None
+        height:44
+        on_release:
+    Button:
+        text: "CA"
+        size_hint:2, None
+        height:44
+        on_release:
+    Button:
+        text: "CO"
+        size_hint:2, None
+        height:44
+        on_release:
+    Button:
+        text: "DL"
+        size_hint:2, None
+        height:44
+        on_release:
+    Button:
+        text: "TX"
+        size_hint:2, None
+        height:44
+        on_release:
+    Button:
+        text: "NV"
+        size_hint:2, None
+        height:44
+        on_release:
+    Button:
+        text: "OR"
+        size_hint:2, None
+        height:44
+        on_release:
+
 
 <FileExplorer>:
     name: 'FileExplorer'
@@ -112,11 +152,19 @@ ScreenManagement:
             size_hint: (1, 0.17)
             pos_hint: {'x': 0, 'y': 0.8}
         Button:
-            size_hint: 0.2, 0.1
-            pos_hint: {'x': 0.4, 'y': 0.025}
-            text: "Main Menu"
+            size_hint: 0.275, 0.1
+            pos_hint: {'x': 0.65, 'y': 0.70}
+            text: "State"
+            font_size: 36
             on_press:
-                root.manager.transition.direction = "down"
+                root.on_released()
+        Button:
+            size_hint: 0.275, 0.1
+            pos_hint: {'x': 0.375, 'y': 0.025}
+            text: "Main Menu"
+            font_size: 36
+            on_press:
+                root.manager.transition.direction = "right"
                 root.manager.current = 'MenuScreen'
 
 <AppAbout>:
@@ -128,9 +176,10 @@ ScreenManagement:
             size_hint: (1, 0.17)
             pos_hint: {'x': 0, 'y': 0.8}
         Button:
-            size_hint: 0.2, 0.1
-            pos_hint: {'x': 0.4, 'y': 0.025}
+            size_hint: 0.275, 0.1
+            pos_hint: {'x': 0.375, 'y': 0.025}
             text: "Main Menu"
+            font_size: 36
             on_press:
                 root.manager.transition.direction = "down"
                 root.manager.current = 'MenuScreen'
